<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!-- 标题栏 -->
    <include
        layout="@layout/base_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 统计文本 -->
    <TextView
        android:id="@+id/tv_statistics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/normal_text"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/base_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 主图 -->
    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/the_image_of_main"
        android:onClick="onClick"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_statistics"
        app:srcCompat="@drawable/main"
        tools:ignore="ImageContrastCheck,UsingOnClickInXml" />

    <!-- 单行文字 -->
    <TextView
        android:id="@+id/one_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/text_api"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="?attr/colorOnSurface"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/main_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 构建目标 -->
    <TextView
        android:id="@+id/bulid_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/bulid_target"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/one_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 构建版本 -->
    <TextView
        android:id="@+id/bulid_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/build_version_1_0_0"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/bulid_target"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 按钮组 1 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_forest_log"
        style="@style/Widget.App.Button.MD3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/forest_log"
        app:icon="@drawable/forest"
        app:iconGravity="end"
        app:iconPadding="5dp"
        android:onClick="onClick"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toStartOf="@id/btn_farm_log"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_friend_watch" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_farm_log"
        style="@style/Widget.App.Button.MD3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/farm_log"
        app:icon="@drawable/farm"
        app:iconGravity="end"
        app:iconPadding="5dp"
        android:onClick="onClick"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toStartOf="@id/btn_other_log"
        app:layout_constraintStart_toEndOf="@id/btn_forest_log"
        app:layout_constraintBottom_toTopOf="@id/btn_github" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_other_log"
        style="@style/Widget.App.Button.MD3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/other_log"
        app:icon="@drawable/all_log"
        app:iconGravity="end"
        app:iconPadding="5dp"
        android:onClick="onClick"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_farm_log"
        app:layout_constraintBottom_toTopOf="@id/btn_settings" />

    <!-- 按钮组 2 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_friend_watch"
        style="@style/Widget.App.Button.MD3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/friend_watch"
        app:icon="@drawable/friend"
        app:iconPadding="5dp"
        app:iconGravity="end"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@id/btn_github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="160dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_github"
        style="@style/Widget.App.Button.MD3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/visit_github"
        app:icon="@drawable/github"
        app:iconPadding="5dp"
        app:iconGravity="end"
        android:onClick="onClick"
        app:layout_constraintEnd_toStartOf="@id/btn_settings"
        app:layout_constraintStart_toEndOf="@id/btn_friend_watch"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/Widget.App.Button.MD3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/settings"
        app:icon="@drawable/setting"
        app:iconPadding="5dp"
        app:iconGravity="end"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_github"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="120dp" />

</androidx.constraintlayout.widget.ConstraintLayout>