<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/textColorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_batch_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_invert"
            android:textColor="@color/selection_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/dialog_list_button"
            android:minHeight="50dp"
            android:padding="8dp"
            android:text="@string/select_invert"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_all"
            android:textColor="@color/selection_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btn_select_invert"
            android:background="@drawable/dialog_list_button"
            android:minHeight="50dp"
            android:padding="8dp"
            android:text="@string/select_all"
            android:textAllCaps="false" />

    </RelativeLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fastScrollEnabled="true"
        android:id="@+id/lv_list"
        android:textColor="@color/textColorPrimary"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/edt_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/search"
            android:hint="@string/search"
            android:minHeight="48dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/selection_color"
            android:text="@string/last"
            android:textAllCaps="false"
            android:minHeight="50dp"
            android:background="@drawable/dialog_list_button"
            android:id="@+id/btn_find_last"
            android:padding="12dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/selection_color"
            android:text="@string/next"
            android:textAllCaps="false"
            android:minHeight="50dp"
            android:background="@drawable/dialog_list_button"
            android:id="@+id/btn_find_next"
            android:padding="12dp" />

    </LinearLayout>

</LinearLayout>

