<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/base_title"/>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/background"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/get_tree_items"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_extend"
                android:text="@string/query_the_remaining_amount_of_saplings"
                android:textColor="@color/button_text" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/button_text"
                android:id="@+id/get_newTree_items"
                android:background="@drawable/button_extend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/search_for_new_items_on_saplings"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/button_text"
                android:id="@+id/query_area_trees"
                android:background="@drawable/button_extend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/search_for_unlocked_regions"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@color/button_text"
                android:id="@+id/get_unlock_treeItems"
                android:background="@drawable/button_extend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/search_for_unlocked_items"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
